ConfustionMatrix,VisualArch,WholeLevelView photos added

--- a/index.html
+++ b/index.html
@@ -206,24 +206,24 @@
         <h2>System Overview</h2>
         <div class="media-grid">
           <div class="media-card">
-            <img src="https://placehold.co/640x360/1a2029/00d4aa?text=Architecture+Diagram" alt="System architecture placeholder">
+            <img src="photos/VisualArch.png" alt="System architecture diagram">
             <div class="caption">
               <strong>System Architecture</strong>
               Edge compute pipeline and sensor integration
             </div>
           </div>
           <div class="media-card">
-            <img src="https://placehold.co/640x360/1a2029/00d4aa?text=Manufacturing+Line" alt="Manufacturing line placeholder">
+            <img src="photos/WholeLevelView.png" alt="Manufacturing line - edge AI testbed with conveyor and vials">
             <div class="caption">
               <strong>Manufacturing Line</strong>
               Pharmaceutical production environment
             </div>
           </div>
           <div class="media-card">
-            <img src="https://placehold.co/640x360/1a2029/00d4aa?text=AI+Inference" alt="AI inference placeholder">
+            <img src="photos/ConfusionMatrix.png" alt="Confusion matrix - YOLO classifier performance for cracked vs normal vials">
             <div class="caption">
               <strong>AI Inference</strong>
-              Multi-modal anomaly detection results
+              We fine-tuned a pre-trained YOLO Classifier to detect cracks and whether vials were capped properly.
             </div>
           </div>
         </div>
