--- a/index.html
+++ b/index.html
@@ -150,11 +150,18 @@
       transform: translateY(-2px);
     }
 
-    .video-card video {
+    .video-card video,
+    .video-card .video-embed {
       width: 100%;
       aspect-ratio: 16 / 9;
       display: block;
       background: var(--bg-secondary);
+    }
+
+    .video-card .video-embed iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
     }
 
     .video-card .caption {
@@ -235,10 +242,12 @@
         <h2>Demo Videos</h2>
         <div class="video-grid">
           <div class="video-card">
-            <div class="placeholder-box">Anomaly Detection Demo<br><small>Add video URL or host externally (YouTube, Vimeo)</small></div>
+            <div class="video-embed">
+              <iframe src="https://www.youtube.com/embed/qvLvK81kSe4" title="Anomaly Detection Demo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
             <div class="caption">
               <strong>Anomaly Detection Demo</strong>
-              Edge AI inference on pharmaceutical manufacturing line. Host large videos on YouTube/Vimeo and embed the URL.
+              Edge AI inference on pharmaceutical manufacturing line.
             </div>
           </div>
           <div class="video-card">
