Team Member Names/Roles

--- a/index.html
+++ b/index.html
@@ -238,6 +238,116 @@
       font-family: 'JetBrains Mono', monospace;
     }
 
+    /* Meet the Team - Executive Style */
+    .team-intro {
+      color: var(--text-secondary);
+      font-size: 1.05rem;
+      max-width: 640px;
+      margin-bottom: 3rem;
+      line-height: 1.7;
+    }
+
+    .team-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+      align-items: start;
+    }
+
+    .team-card {
+      background: var(--bg-card);
+      border: 1px solid var(--border);
+      border-radius: 16px;
+      overflow: hidden;
+      transition: border-color 0.2s, box-shadow 0.2s;
+    }
+
+    .team-card:hover {
+      border-color: var(--accent-muted);
+      box-shadow: 0 8px 32px rgba(0, 212, 170, 0.08);
+    }
+
+    .team-card--lead {
+      grid-column: 1 / -1;
+      display: grid;
+      grid-template-columns: 200px 1fr;
+      gap: 2.5rem;
+      align-items: center;
+      padding: 2rem;
+    }
+
+    .team-card--lead .team-photo-wrap {
+      flex-shrink: 0;
+    }
+
+    .team-card--lead .team-info {
+      padding: 0;
+    }
+
+    .team-photo-wrap {
+      aspect-ratio: 1;
+      background: linear-gradient(145deg, var(--bg-secondary) 0%, var(--bg-card) 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--text-secondary);
+      font-size: 0.75rem;
+      font-family: 'JetBrains Mono', monospace;
+      letter-spacing: 0.05em;
+    }
+
+    .team-card--lead .team-photo-wrap {
+      width: 200px;
+      height: 200px;
+      border-radius: 12px;
+      aspect-ratio: unset;
+    }
+
+    .team-card:not(.team-card--lead) .team-photo-wrap {
+      border-radius: 12px 12px 0 0;
+    }
+
+    .team-info {
+      padding: 1.75rem 1.5rem;
+    }
+
+    .team-name {
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: var(--text-primary);
+      margin-bottom: 0.35rem;
+    }
+
+    .team-card--lead .team-name {
+      font-size: 1.5rem;
+    }
+
+    .team-title {
+      font-size: 0.875rem;
+      color: var(--accent);
+      font-weight: 500;
+      margin-bottom: 0.75rem;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+    }
+
+    .team-bio {
+      font-size: 0.9rem;
+      color: var(--text-secondary);
+      line-height: 1.65;
+    }
+
+    @media (max-width: 640px) {
+      .team-card--lead {
+        grid-template-columns: 1fr;
+        text-align: center;
+      }
+
+      .team-card--lead .team-photo-wrap {
+        margin: 0 auto;
+      }
+    }
+
     /* Footer */
     footer {
       padding: 2rem 0 3rem;
@@ -340,21 +450,40 @@
     <section id="meet-the-team">
       <div class="container">
         <h2>Meet the Team</h2>
-        <div class="media-grid" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
-          <div class="media-card">
-            <div class="placeholder-box" style="aspect-ratio: 1;">Team Member</div>
-            <div class="caption">
-              <strong>Placeholder</strong>
-              Add team member photos and names
+        <p class="team-intro">Our leadership brings together expertise in embedded systems, machine learning, and edge computing to deliver real-time anomaly detection for pharmaceutical manufacturing.</p>
+        <div class="team-grid">
+          <article class="team-card team-card--lead">
+            <div class="team-photo-wrap">Photo</div>
+            <div class="team-info">
+              <h3 class="team-name">Noah Mathew</h3>
+              <p class="team-title">Team Lead</p>
+              <p class="team-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-          </div>
-          <div class="media-card">
-            <div class="placeholder-box" style="aspect-ratio: 1;">Team Member</div>
-            <div class="caption">
-              <strong>Placeholder</strong>
-              Add team member photos and names
+          </article>
+          <article class="team-card">
+            <div class="team-photo-wrap">Photo</div>
+            <div class="team-info">
+              <h3 class="team-name">Paribesh Thapaliya</h3>
+              <p class="team-title">Embedded Systems</p>
+              <p class="team-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             </div>
-          </div>
+          </article>
+          <article class="team-card">
+            <div class="team-photo-wrap">Photo</div>
+            <div class="team-info">
+              <h3 class="team-name">Artin Tamaddon</h3>
+              <p class="team-title">Embedded Systems</p>
+              <p class="team-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </article>
+          <article class="team-card">
+            <div class="team-photo-wrap">Photo</div>
+            <div class="team-info">
+              <h3 class="team-name">Trang Nguyen</h3>
+              <p class="team-title">Machine Learning Engineer</p>
+              <p class="team-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+          </article>
         </div>
       </div>
     </section>
