New Header Argus & UI Intro

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Multi Modal Edge AI System for Anomaly Detection in Pharmaceutical Manufacturing</title>
+  <title>Argus | Multi Modal Edge AI System for Anomaly Detection in Pharmaceutical Manufacturing</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -100,6 +100,39 @@
     /* Sections */
     section {
       padding: 3rem 0;
+    }
+
+    /* About section layout */
+    .about-layout {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 2.5rem;
+      align-items: center;
+    }
+
+    .about-text {
+      color: var(--text-secondary);
+      font-size: 1.05rem;
+      line-height: 1.7;
+    }
+
+    .about-video-placeholder {
+      aspect-ratio: 16 / 9;
+      background: linear-gradient(145deg, var(--bg-secondary) 0%, var(--bg-card) 100%);
+      border: 1px dashed var(--border);
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--text-secondary);
+      font-size: 0.875rem;
+      font-family: 'JetBrains Mono', monospace;
+    }
+
+    @media (max-width: 768px) {
+      .about-layout {
+        grid-template-columns: 1fr;
+      }
     }
 
     section h2 {
@@ -370,8 +403,8 @@
 
   <header id="about">
     <div class="container">
-      <h1>Multi Modal Edge AI System for Anomaly Detection in Pharmaceutical Manufacturing</h1>
-      <p class="subtitle">Real-time visual inspection and quality assurance at the edge</p>
+      <h1>Argus</h1>
+      <p class="subtitle">Multi Modal Edge AI System for Anomaly Detection in Pharmaceutical Manufacturing</p>
     </div>
   </header>
 
@@ -379,11 +412,14 @@
     <section id="about-content">
       <div class="container">
         <h2>About</h2>
-        <p style="max-width: 700px; color: var(--text-secondary); font-size: 1.05rem;">
-          This project implements a multi-modal edge AI system for real-time anomaly detection in pharmaceutical manufacturing. 
-          Our solution uses a fine-tuned YOLO classifier to detect cracks and verify proper vial capping, enabling quality assurance 
-          at the edge with minimal latency.
-        </p>
+        <div class="about-layout">
+          <p class="about-text">
+            This project implements a multi-modal edge AI system for real-time anomaly detection in pharmaceutical manufacturing. 
+            Our solution uses a fine-tuned YOLO classifier to detect cracks and verify proper vial capping, enabling quality assurance 
+            at the edge with minimal latency.
+          </p>
+          <div class="about-video-placeholder">Video Placeholder</div>
+        </div>
       </div>
     </section>
 
@@ -420,28 +456,11 @@
 
     <section id="videos">
       <div class="container">
-        <h2>Demo Videos</h2>
-        <div class="video-grid">
-          <div class="video-card">
-            <div class="placeholder-box">Placeholder Video 1</div>
-            <div class="caption">
-              <strong>Placeholder Video</strong>
-              Add your video file to replace this placeholder
-            </div>
-          </div>
-          <div class="video-card">
-            <img src="photos/WholeLevelView.png" alt="Manufacturing line - edge AI testbed with conveyor and vials">
-            <div class="caption">
-              <strong>Manufacturing Line</strong>
-              Pharmaceutical production environment
-            </div>
-          </div>
-          <div class="video-card">
-            <div class="placeholder-box">Placeholder Video 3</div>
-            <div class="caption">
-              <strong>Placeholder Video</strong>
-              Add your video file to replace this placeholder
-            </div>
+        <h2>How Scientists can Inspect Waste of Materials</h2>
+        <div class="video-card" style="max-width: 800px;">
+          <div class="placeholder-box">Video Placeholder</div>
+          <div class="caption">
+            <strong>Argus, our User Interface</strong>
           </div>
         </div>
       </div>
@@ -513,7 +532,7 @@
 
   <footer>
     <div class="container">
-      <p>Multi Modal Edge AI System for Anomaly Detection in Pharmaceutical Manufacturing</p>
+      <p>Argus — Multi Modal Edge AI System for Anomaly Detection in Pharmaceutical Manufacturing</p>
     </div>
   </footer>
 </body>
