--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
         <h2>About</h2>
         <div class="about-layout">
           <p class="about-text">
-            This project implements a multi-modal edge AI system for real-time anomaly detection in pharmaceutical manufacturing. 
-            Our solution uses a fine-tuned YOLO classifier to detect cracks and verify proper vial capping, enabling quality assurance 
-            at the edge with minimal latency.
+            This project is aimed at developing an eco-friendly, sustainable, cost-effective, and scalable solution for anomaly detection 
+            in pharmaceutical manufacturing. This project is a proof of concept on how pharmaceutical manufacturing can opt for edge computing
+            to reduce the carbon footprint that comes from costs including power and latency.
           </p>
           <div class="about-video-placeholder">Video Placeholder</div>
         </div>
