--- a/index.html
+++ b/index.html
@@ -475,8 +475,10 @@
             <div class="team-photo-wrap">Photo</div>
             <div class="team-info">
               <h3 class="team-name">Noah Mathew</h3>
-              <p class="team-title">Team Lead</p>
-              <p class="team-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="team-title">Team Lead</p>I am a senior at UC Irvine, studying Computer Engineering. I am the team lead for this project. 
+            During my time at UST this past summer, I gained knowledge on different distributed systems including edge computing. I have done several 
+          projects related to pharmaceutical manufacturing, and noticed the need for a more sustainable and cost-effective solution for anomaly detection. This sparked my interest creating this idea and taking it to senior design
+        Major Pharma Companies waste significant amounts of medicine vials that could be prevented thus from a cost-effective solution as shown here.</p>
             </div>
           </article>
           <article class="team-card">
