--- a/index.html
+++ b/index.html
@@ -491,6 +491,17 @@
       </div>
     </section>
 
+    <section>
+      <div class="container">
+        <h2>Real Time Edge Based Image Capture and Streaming</h2>
+        <div class="video-card" style="max-width: 800px;">
+          <div class="video-embed">
+            <iframe src="https://www.youtube.com/embed/DxWUixn6KDU" title="Real Time Edge Based Image Capture and Streaming" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="meet-the-team">
       <div class="container">
         <h2>Meet the Team</h2>
