New titles jus dropped fr

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
             <div class="team-photo-wrap">Photo</div>
             <div class="team-info">
               <h3 class="team-name">Paribesh Thapaliya</h3>
-              <p class="team-title">Embedded Systems</p>
+              <p class="team-title">Computer Vision Engineer</p>
               <p class="team-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             </div>
           </article>
@@ -626,7 +626,7 @@
             <div class="team-photo-wrap">Photo</div>
             <div class="team-info">
               <h3 class="team-name">Artin Tamaddon</h3>
-              <p class="team-title">Embedded Systems</p>
+              <p class="team-title">Firmware Engineer</p>
               <p class="team-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </article>
