--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
           </div>
           <div class="media-card">
             <div class="video-embed">
-              <iframe src="https://www.youtube.com/embed/qvLvK81kSe4" title="Anomaly Detection Demo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/7Gu7ogGSSG0" title="Anomaly Detection Demo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="caption">
               <strong>Anomaly Detection Demo</strong>
